--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   web:
-    image: hello-website
+    image: pujanprajapati/hello-website
     container_name: hello-website-container
     ports:
       - "3000:80"
